# AkcyzaIB_XML_Helper

./: package.json  vite.config.ts
docs/: ARCHITECTURE.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/app/: router.tsx
src/app/layouts/: AppLayout.tsx
src/features/competitors/api/: competitorsRepository.ts
src/features/products/api/: productsRepository.ts
src/pages/: PlaceholderPage.tsx
src/pages/competitors/: CompetitorCreatePage.tsx  CompetitorsPage.tsx
src/pages/dashboard/: DashboardPage.tsx
src/pages/products/: ProductCreatePage.tsx  ProductDetailsPage.tsx  ProductForm.tsx  ProductsPage.tsx
src/pages/settings/: SettingsPage.tsx
src/shared/api/: client.ts
src/shared/components/: ui.tsx
src/shared/constants/: navigation.ts
src/shared/lib/: formatters.ts
src/styles/: globals.css
