[package]
name = "akcyzaib-xml-helper"
version = "0.1.0"
description = "Personal Allegro business assistant interactive prototype"
authors = ["AkcyzaIB"]
edition = "2021"

[lib]
name = "akcyzaib_xml_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
